--- a/site/main.css
+++ b/site/main.css
@@ -25,8 +25,9 @@
     }
 }
 
-html, body {
+body {
   height: 100%;
+  padding-bottom: 10px;
 }
 
 table.board {
@@ -79,4 +80,43 @@ div.board {
 div.link {
   display: table-cell;
   width: 50%;
+}
+
+@media only screen and (max-width: 500px) {
+  div.container {
+    display: table;
+    width: 100%;
+    height: 70%;
+    word-wrap: break-word;
+  }
+
+  div.layout {
+    display: inherit;
+  }
+  div.link {
+    display: table-row;
+    height: 20%;
+  }
+  div.board {
+    display: table-row;
+    height: 70%;
+    width: 100%;
+  }
+
+  table.board td {
+      border: 3px solid black;
+      text-align: center;
+      vertical-align: middle;
+      height: 10vw;
+      width: 10vw;
+  }
+
+  h2 {
+    font-size: 14pt;
+  }
+
+  img.mark {
+    width: 8vw;
+    height: 8vw;
+  }
 }
